--- a/src/webui/src/app/_layout/header/header.component.html
+++ b/src/webui/src/app/_layout/header/header.component.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <title>Document</title>
+</head>
+
+
+<body>
+
 <header class="header sticky-top">
   <nav class="navbar navbar-light bg-white px-sm-4 ">
     <a class="navbar-brand py-2 d-md-none  m-0 material-icons toggle-sidebar" (click)="toggleSidebar()">menu</a>
@@ -19,3 +35,5 @@
   </nav>
 
 </header>
+</body>
+</html>
