--- a/src/webui/src/app/_layout/footer/footer.component.html
+++ b/src/webui/src/app/_layout/footer/footer.component.html
@@ -14,6 +14,10 @@
 
 <body>
 
-<p>issue works!</p>
+<div class="footer text-right">
+  <div>
+    <strong>Copyright</strong> demetm © 2019
+  </div>
+</div>
 </body>
 </html>
