--- a/src/webui/src/app/app.component.html
+++ b/src/webui/src/app/app.component.html
@@ -3,4 +3,11 @@
     {{title}}
   </h1>
 </div>
+
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+<app-issue></app-issue>
+<app-footer></app-footer>
+
 <router-outlet></router-outlet>
+
