--- a/src/webui/src/app/app.component.html
+++ b/src/webui/src/app/app.component.html
@@ -1,13 +1,8 @@
-<div style="...">
-  <h1>
-    {{title}}
-  </h1>
-</div>
 
-<app-header></app-header>
-<app-sidebar></app-sidebar>
-<app-issue></app-issue>
-<app-footer></app-footer>
+
+<!--<app-app-layout></app-app-layout> 14.06-->
+
+
 
 <router-outlet></router-outlet>
 
