--- a/src/webui/src/app/_layout/app-layout/app-layout.component.html
+++ b/src/webui/src/app/_layout/app-layout/app-layout.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <title>Document</title>
 </head>
-
 
 <body>
 
@@ -26,7 +25,6 @@
     </div>
   </div>
 </section>
-
 
 </body>
 </html>
