--- a/src/webui/src/app/_layout/header/header.component.html
+++ b/src/webui/src/app/_layout/header/header.component.html
@@ -29,7 +29,7 @@
           <a class="dropdown-item">My Account</a>
           <a class="dropdown-item">Account Settings</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" [routerLink]="['/login']">Logout</a>
+          <a class="dropdown-item" [routerLink]="['/auth/login']">Logout</a>
         </div>
       </li>
 
@@ -38,6 +38,8 @@
   </nav>
 
 </header>
+
+
 
 </body>
 </html>
