--- a/src/webui/src/app/pages/dashboard/dashboard.component.html
+++ b/src/webui/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,13 @@
 
+<div class="content-wrapper">
+  dashboard
+</div>
 
-<p>dashboard works!</p>
+
+
+<!--<div class="content-wrapper">
+  <p>dashboard works!</p>
+
+</div>  14.06-->
+
+
